css/style.css
.navbar {
  padding-top: 1em;
}

.data-page #data a,
.data-page #data a:hover,
.data-page #data a:focus {
  color: #555555;
  text-decoration: none;
  background-color: #e5e5e5;
  -webkit-box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.125);
     -moz-box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.125);
          box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.125);
}
.api-page #api a,
.api-page #api a:hover,
.api-page #api a:focus {
  color: #555555;
  text-decoration: none;
  background-color: #e5e5e5;
  -webkit-box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.125);
     -moz-box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.125);
          box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.125);
}

blockquote p {
  font-size: 14px;
  line-height: 1.5em;
}

table {
  margin-bottom: 1em;
}
caption {
  font-style: italic;
  text-align: left;
}
th {
  text-align: left;
}
th,
td {
  padding-right: 10px;
}
td {
  vertical-align: top;
}

table.table-terms {
  width: auto;
  max-width: none;
}
table.table-terms th {
  width: 6.6em;
}
table.table-terms td {
  width: 7.3em;
}
table.table-wider td {
  width: 8.5em;
}
table.table-widest td {
  width: 9em;
}

footer {
  text-align: center;
}

em.rfc2119 {
  font-style: normal;
  font-variant: small-caps;
}

.note {
  color: #999999; /* .muted */
  font-size: 85%; /* small */
  font-style: italic;
}

